--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-floating-whatsapp": "^5.0.8",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
