--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.13",
     "bootstrap": "^5.3.8",
+    "i18next": "^25.7.3",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-floating-whatsapp": "^5.0.8",
+    "react-i18next": "^16.5.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.8.2"
   },
