--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "bootstrap": "^5.3.8",
     "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
